# astrofin-sentinel-platform

./: .MIGRATION_IN_PROGRESS  .abacus.donotdelete  .bandit  .coderabbit.yaml  .coderabbit_test.py  .cursorrules  .env.db.example  .env.example  .env.pgvector.example  .env.prod.enc.yaml  .env.prod.example  .flake8  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .graphifyignore  .patch_optionb.py  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  AGENTS.md  ARCHITECTURE_AUDIT.md  AUDIT_2026-03-26.md  AUDIT_2026-06-17.md  AUDIT_REPORT.md  AUDIT_REPORT_STEP1_2026-07-23.md  BACKLOG_PROGRESS.md  CHANGELOG.md  CHANGE_REQUEST.md  CONSOLIDATION_MERGE_LOG.txt  CONSOLIDATION_PLAN.md  CONSOLIDATION_PLAN_v2.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  DAILY_REPORT_2026-07-15.md  DEPLOYMENT.md  Dockerfile  ENV.md  EXECUTIVE_SUMMARY.md  (+63 more)
acos-contracts/: README.md  pyproject.toml
acos-contracts/acos_contracts/: __init__.py  contracts.py  deterministic.py  deterministic_factory.py  errors.py  events.py  feature_pipeline.py  interfaces.py  state.py  trading.py
astrofin-sentinel-platform/: .bandit  .coderabbit.yaml  .coveragerc  .gitignore  .gitleaks-baseline.json  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  AUDIT_2026-03-26_v2.md  AUDIT_REPORT.md  ActionPlan-BlackScreen-Fix.md  CHANGELOG.md  CONSOLIDATION_PLAN.md  Dockerfile  EXECUTIVE_SUMMARY.md  FINAL_INTEGRATION_TEST.py  MAINTAINERS.md  MOSCOW_PRIORITIZATION.md  Makefile  PRODUCTION_PLAN.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  REPORT_STEP1_AUDIT_BASELINE.md  ROADMAP.md  SLO.md  SOUL.md  SPRINT_1.md  SPRINT_1_ISSUES.md  coverage.json  dev-requirements.txt  diff_against_asp-canonical-real.txt  docker-compose.pgvector.yml  docker-compose.yml  langgraph_schema.py  muhurtha.py  nano  outbox.db  progress.md  (+9 more)
astrofin-sentinel-platform/.github/: SECURITY.md  labeler.yml  project-fields.json  release-drafter-config.yml  release-drafter.yml
astrofin-sentinel-platform/.logs/: 20260724-144554-2390f8e58b9a421a8059a523a9b7c168.out  20260724-144554-414d8a7a93704ba18571681adc4a0aab.out  20260724-144554-b027afa3650d4cc284ed68291833800e.out
astrofin-sentinel-platform/REPORTS/: AUDIT_REPORT_STEP1_2026-07-21.md  AUDIT_REPORT_STEP2_2026-07-21.md
astrofin-sentinel-platform/admission_controller/: controller.py  probabilistic.py
astrofin-sentinel-platform/agents/: HMMRegimeAgent_instructions.md  __init__.py  astro_council_agent.py  gitagent_exporter.py  gitagent_registry.py  karl_synthesis.py
astrofin-sentinel-platform/ai_scheduler/: scheduler_v2.py
astrofin-sentinel-platform/api/: main.py  schemas.py
astrofin-sentinel-platform/astrology/: residual_model.py
astrofin-sentinel-platform/atom-core/: Makefile  README.md
astrofin-sentinel-platform/audit_repo/: PROJECT_SPEC.md  pyproject.toml
astrofin-sentinel-platform/backtest/: atom_014_stress_test.py  backtest_runner.py  db_analysis.py  regime_detector.py  vedic_backtest.py
astrofin-sentinel-platform/bench/: bench_diversity.py  verify_task6.py
astrofin-sentinel-platform/common/: __init__.py  deterministic.py  interfaces.py
astrofin-sentinel-platform/config/: relation_weights.json
astrofin-sentinel-platform/core/: aspects.py  astro_rl_engine.py  auth.py  base_agent.py  cache.py  circuit_breaker.py  ensemble_voting.py  envelopes.py  ephemeris.py  history.db  history_db.py  history_db_pg.py  http_client.py  kepler.py  kepler_calibrator.py  kepler_hybrid.py  llm_router.py  message_broker.py  online_trainer.py  outbox.py  panchanga.py  rag_client.py  residual_model.py  reward_engine.py  security_middleware.py  settings.py  thompson.py  tracing.py  volatility.py
astrofin-sentinel-platform/db/: __init__.py  __main__.py  astrofin.db  init.py  migrate_from_sqlite.py  models.py  session.py
astrofin-sentinel-platform/deploy/: docker-compose.monitoring.yml
astrofin-sentinel-platform/docs/: API_SETUP.md  ARCHITECTURE.md  CLEANUP_2026-07-09.md  CODE_REVIEW.md  DEPENDENCY_AUDIT_20260715.md  FIX_PLAN_213_215.md  KNOWN_ISSUES.md  META_RL_ARCHITECTURE.md  PATTERN_A_STATUS.md  REPOSITORY_LAYOUT.md  SETUP_REAL_IMAGES.md  architecture_diagrams.md  chaos-engineering.md  error_audit.md  p2_04_observability.md  phase5_lag_window_integration.md  production-ready-checklist.md  slo.md
astrofin-sentinel-platform/examples/: 01_fundamental_agent.py
astrofin-sentinel-platform/knowledge/: build_index.py  rag_index.py  rag_retriever.py
astrofin-sentinel-platform/l11_verifier/: verifier.py
astrofin-sentinel-platform/mas_factory/: __init__.py  atom_030_stress_test.py  atom_032_e2e_test.py  atom_033_production_test.py  engine.py  topology.py  visualizer.py
astrofin-sentinel-platform/meta_rl/: ab_testing.py  alerts.py  calibration.py  cli.py  contracts.py  data_adapter.py  evolution.py  git_agent_exporter.py  hyperopt.py  live_data.py  live_provider.py  metrics.py  persistence.py  reward.py  strategy_evaluator.py  test_reward.py
astrofin-sentinel-platform/migrations/: env.py  migrate.py
astrofin-sentinel-platform/migrations_postgres/: 0009_pgvector.sql
astrofin-sentinel-platform/models/: residual_model.joblib
astrofin-sentinel-platform/monitoring/: health_endpoints.py
astrofin-sentinel-platform/orchestration/: council_orchestrator.py  karl_cli.py  langgraph_schema.py  result_aggregator.py  router.py  sentinel_v5.py  sentinel_v5_broker.py  tracing.py
astrofin-sentinel-platform/pop-os-setup/: check_installed.py
astrofin-sentinel-platform/scheduler_v3/: api.py
astrofin-sentinel-platform/schema/: 001_initial.sql  init-timescale.sql
astrofin-sentinel-platform/scripts/: architecture_linter.py  ci_validate_data_room.sh  compare_backtest_modes.py  dora_metrics.py  optimize_lag_blend.py  parse_known_issues.py  ralph_agent.py  run_backtest.py  translate_comments.py  validate_agent.py  validate_alerts_metrics.py  validate_docker_security.py  validate_registry.py
astrofin-sentinel-platform/security/: secrets-policy.md  threat-model.md
astrofin-sentinel-platform/strategies/: __init__.py  base.py  generator.py
(+3274 files in other folders)
