[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "astrofin-sentinel-platform/src/bridges/roma/auth/engine.py",
    "bridge/roma/auth/engine.py",
    "src/bridges/roma/auth/engine.py",
    "kernel/atom-federation/build/lib/sbs/cli.py",
    "infrastructure/asurdev/acos/network/amnezia_wg.py",
    "infrastructure/asurdev/slsa4/scripts/intoto_layout_generator.py",
]

[tool.ruff.lint]
select = []
