[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrofin-sentinel-v5"
version = "5.0.0"
description = "Multi-Agent Trading System with KARL Self-Improvement and Astro-Timing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "PROPRIETARY"}
authors = [{name = "asurdev", email = "mahaasur13@gmail.com"}]

[project.scripts]
astrofin = "orchestration.sentinel_v5:cli"
astrofin-karl = "orchestration.karl_cli:cli"
astrofin-dashboard = "web.wsgi:launch"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --tb=short"
asyncio_mode = "auto"
# Prometheus metrics are auto-disabled during pytest runs via
# tests/conftest.py (SENTINEL_METRICS_ENABLED=0). The default
# prometheus_client REGISTRY is global and re-importing agents/metrics.py
# in multiple test modules tries to re-register the same counter names,
# raising "Duplicated timeseries in CollectorRegistry". Production code
# (and tests that explicitly want to exercise metrics) can override with
# ``SENTINEL_METRICS_ENABLED=1``.
markers = [
    "unit: fast unit tests with no external deps (default)",
    "integration: tests that hit network/DB/disk",
    "slow: tests that take >1s",
]
[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []
