[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acos-contracts"
version = "0.1.0"
description = "Shared protocols, DTOs, and determinism primitives for the AstroFin Sentinel ecosystem (astrofin-sentinel-platform, AsurDev, home-cluster-iac, roma-execution-bridge)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "AstroFin Sentinel Team" },
]
keywords = ["contracts", "protocols", "deterministic", "tracing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

# No runtime deps. The package is stdlib-only by design.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "mypy>=1.5",
]

[tool.setuptools.packages.find]
include = ["acos_contracts*"]
exclude = ["tests*"]
