[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrofin-sentinel-v5"
version = "5.0.0"
description = "Multi-Agent Trading System with KARL Self-Improvement and Astro-Timing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "PROPRIETARY"}
authors = [{name = "asurdev", email = "mahaasur13@gmail.com"}]

[project.scripts]
astrofin = "orchestration.sentinel_v5:cli"
astrofin-karl = "orchestration.karl_cli:cli"
astrofin-dashboard = "web.wsgi:launch"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: fast unit tests with no external deps (default)",
    "integration: tests that hit network/DB/disk",
    "slow: tests that take >1s",
]
[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501", "E701", "E702", "E721", "E741", "F401", "F402", "F403", "F811", "BLE001", "C901"]
