[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atom-federation-os"
dynamic = ["version"]
description = "SBS v1 — distributed OS verification system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "asurdev", email = "mahaasur13@gmail.com"},
]

dependencies = [
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "hypothesis>=6.90",
]

ml = [
    "numpy>=1.26",
]

grpc = [
    "grpcio",
    "protobuf",
]

[project.scripts]
sbs = "sbs.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "sbs*",
    "alignment*",
    "core*",
    "drl*",
    "rpc*",
    "dag*",
    "pkg*",
    "proto*",
    "swarm*",
    "proof*",
    "droid*",
    "chaos*",
    "formal*",
    "atomos*",
    "cluster*",
    "actuator*",
    "coherence*",
    "federation*",
    "kubernetes*",
    "resilience*",
    "consistency*",
    "meta_control*",
    "formal_model*",
    "integrations*",
    "observability*",
    "orchestration*"
]
exclude = ["tests*", "**/tests*"]


[tool.pytest.ini_options]
testpaths = [
    "sbs/tests",
    "alignment",
    "orchestration/phase2",
    "federation/tests"
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
addopts = "--ignore=alignment/test_mcpc.py --ignore=chaos/test_chaos.py --ignore=federation/tests/test_consensus_resolver.py --ignore=local-ai-stack/agent-runtime/testing/test_task_store.py --ignore=swarm/test_swarm.py -q"
