[project]
name = "roma-execution-bridge"
version = "1.0.0"
description = "ROMA JSON → Kubernetes Job Compiler"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.30.0,<0.32",
    "pydantic>=2.0,<3.0",
    "prometheus-fastapi-instrumentator>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "kubernetes>=29.0,<32.0",
    "jinja2>=3.1",
    "jinja2>=3.1",
    "jinja2>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
roma-bridge = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "audit",
    "auth",
    "billing",
    "compiler",
    "consistency",
    "control_plane",
    "cost",
    "dashboard",
    "durability",
    "ecosystem",
    "gpu_worker",
    "ha",
    "input_contract",
    "k8s",
    "models",
    "observability",
    "operator_sdk",
    "org",
    "queue_manager",
    "rbac",
    "reconciler",
    "roma",
    "roma_planner",
    "saas",
    "saas_api",
    "scheduler",
    "tenancy",
    "validator",
]

[tool.pytest.ini_options]
addopts = "--ignore=test_ci.py --ignore=saas/gateway/tests/test_gateway.py --ignore=saas/gateway/tests/test_rate_limiter.py -q"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
